--- a/.gitignore
+++ b/.gitignore
@@ -21,8 +21,15 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-node_modules/
 dist/
 src/node_modules
+
+.DS_Store
+node_modules/
+dist/
+npm-debug.log
+selenium-debug.log
+.idea
 package-lock.json
-.idea/
+.eslintrc.js
+.eslintignore
